# character

./: .gitignore  generate.py  main.py  pyproject.toml
character/: __init__.py
character/adapters/: galge.py  social.py  trpg.py
character/core/: generator.py  master.py  schema.py
characters/: sample.yaml
output/gal-sim-testers/: 01_ishikawa_ryota.yaml  02_mori_daichi.yaml  03_fujiwara_kenji.yaml  04_ogawa_toru.yaml  05_hayashi_shunsuke.yaml  06_matsumoto_hiroshi.yaml  07_nishimura_takeshi.yaml  08_kimura_yuya.yaml  09_abe_masato.yaml  10_shimizu_takuya.yaml
output/galge-heroines/: sakurai_hikari.yaml
